samples/_failures_safe/1761299743_058de3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5fcce790.c: In function ‘main’:
./samples/SAFE/__tmp_5fcce790.c:151:12: error: missing terminating " character
  151 |     printf("Original:
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_5fcce790.c:151:5: error: expected expression at end of input
  151 |     printf("Original:
      |     ^~~~~~
./samples/SAFE/__tmp_5fcce790.c:151:5: error: expected declaration or statement at end of input
